log
Thu Apr 21 15:35:03 UTC 2022: 
 tests:  1|8
total_score: 0/70
73c74a6
Thu Apr 21 15:36:07 UTC 2022: 
 treemap.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
In file included from test.c:4:0:
treemap.c: In function ‘insertTreeMap’:
treemap.c:58:23: error: ‘return’ with a value, in function returning void [-Werror]
             return aux->pair;
                    ~~~^~~~~~
treemap.c:46:6: note: declared here
 void insertTreeMap(TreeMap * tree, void* key, void * value) {
      ^~~~~~~~~~~~~
treemap.c:61:12: error: ‘return’ with a value, in function returning void [-Werror]
     return NULL;
            ^~~~
treemap.c:46:6: note: declared here
 void insertTreeMap(TreeMap * tree, void* key, void * value) {
      ^~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
4aa6c3c
Thu Apr 21 15:36:25 UTC 2022: 
 treemap.c | 28 ++++++++++++++--------------
 1 file changed, 14 insertions(+), 14 deletions(-)
 tests:  8|7
total_score: 10/70
e4d933f
Thu Apr 21 15:39:29 UTC 2022: 
 treemap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  8|7
total_score: 10/70
83fd933
Thu Apr 21 15:39:40 UTC 2022: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
ba4220d
Thu Apr 21 15:48:00 UTC 2022: 
 treemap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:4:0:
treemap.c: In function ‘insertTreeMap’:
treemap.c:49:15: error: unused variable ‘aux’ [-Werror=unused-variable]
     TreeNode *aux = tree->root;
               ^~~
cc1: all warnings being treated as errors
Compilation failed
14ea190
